--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,22 @@
-# History files
+# R and RStudio files.
 .Rhistory
-
-# Example code in package build process
-*-Ex.R
-
-# R data files from past sessions
-.Rdata
-
-# RStudio files
-.Rproj.user/
+.RData
 .Rproj.user
+.Rproj.user/
+
+# The devtools zip is downloaded when the package is updating itself.  If it's not deleted, there's no reason to commit it to the repository.
+devtools.zip
+
+# Protected Information; see cubuspl42's answer in http://stackoverflow.com/questions/2415873/exceptions-in-gitignore
+/unshared_material/*
+/data_unshared/*
+
+# Dataset Exceptions
+!utility/package_dependency_list.csv
+
+# Keep the README files in the unshared directories.  They provide documentation, and also force the directories to be created on other machines.
+# Depending on how you do it, you might need to add w/ the command line (eg, git add -f ./data_unshared/raw/README.md)
+!README.md
+
+# Windows
+Thumbs.db
